@@ -13,6 +13,9 @@ detected as having a virus, the message is rejected, and the error
 response contains the virus name as detected by ClamAV.  This scanner
 only operates over TCP/IP sockets (either remotely or locally).</p>
 
+<p><b>Note:</b> This file causes mailfront to save messages to temporary
+files.</p>
+
 <h2>Configuration</h2>
 
 <dl>
